change inventory type

--- a/terraform-create-vms-in-hetzner/inventory.yaml.tmpl
+++ b/terraform-create-vms-in-hetzner/inventory.yaml.tmpl
@@ -1,26 +1,26 @@
-[ingress]
+all:
+  children:
+    ingress:
+      hosts:
 %{ for content_key, content_value in content }
 %{~ if length(regexall("ingress", content_key)) > 0 ~}
-${content_key} ansible_ssh_host=${content_value}
+        ${content_key}:
+          ansible_host: ${content_value}
 %{ endif ~}
 %{~ endfor ~}
-
-[masters]
+    master:
+      hosts:
 %{ for content_key, content_value in content }
 %{~ if length(regexall("master", content_key)) > 0 ~}
-${content_key} ansible_ssh_host=${content_value}
+        ${content_key}:
+          ansible_host: ${content_value}
 %{ endif ~}
 %{~ endfor ~}
-
-[workers]
+    workers:
+      hosts:
 %{ for content_key, content_value in content }
 %{~ if length(regexall("worker", content_key)) > 0 ~}
-${content_key} ansible_ssh_host=${content_value}
+        ${content_key}:
+          ansible_host: ${content_value}
 %{ endif ~}
 %{~ endfor ~}
-
-[all:children]
-ingress
-masters
-workers
-
